# colab-automation

./: .gitignore  ERRORS.md  LICENSE  README.md  SKILL.md  pyproject.toml
.claude/: settings.local.json
colab_automation/: __init__.py  config.py  config_store.py  js.py  notebook_utils.py  runner.py  session.py  upload.py  utils.py
examples/: cell_patch.py  manual_cleanup.py  output_extractor.py  parallel_runs.py  run_notebook.py
tests/: test_config.py  test_notebook_utils.py
