[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "colab-automation"
version = "0.1.0"
description = "Run Google Colab notebooks automatically without manual execution"
readme = "README.md"
license = {text = "MIT-0"}
requires-python = ">=3.10"
authors = [{name = "jerronl", email = "jerron@gmail.com"}]
keywords = ["colab", "notebook", "automation", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["playwright>=1.40"]

[project.urls]
Repository = "https://github.com/jerronl/colab-automation"
Issues = "https://github.com/jerronl/colab-automation/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["colab_automation*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
